Got finn rxn diff vs spect rxn diff

--- a/src/coding.ipynb
+++ b/src/coding.ipynb
@@ -5,12 +5,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Assuming other parts of the class are defined here\n",
+    "\n",
+    "def plot_finndiff_vs_spect(self, spect):\n",
+    "    print(\"Plotting...\")\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "    # plot with time on the x-axis\n",
+    "\n",
+    "    # 1. plot finite diff (Want this to be blue, plot on legend)\n",
+    "    x_idx = [self.impulse_idx + i for i in range(0, 10)]\n",
+    "    for i in range(len(x_idx)):\n",
+    "        ax.plot(\n",
+    "            self.time_mesh,\n",
+    "            self.u_diff[x_idx[i], :] / self.n_ca,\n",
+    "            label=f\"$\\Delta$x = {i}\",\n",
+    "            color='blue'\n",
+    "        )\n",
+    "\n",
+    "    # 2. plot spectral reaction diffusion (want this to be red, plot on legend)\n",
+    "    for i in range(len(x_idx)):\n",
+    "        ax.plot(\n",
+    "            spect.time_mesh,\n",
+    "            spect.u_diff[x_idx[i], :] / spect.n_ca,\n",
+    "            label=f\"Spectral $\\Delta$x = {i}\",\n",
+    "            color='red'\n",
+    "        )\n",
+    "\n",
+    "    ax.set_xlabel(\"Time (usec)\")\n",
+    "    ax.set_title(\"Calcium vs Time\")\n",
+    "    ax.legend(title=\"Steps from impulse\")\n",
+    "    ax.annotate(\n",
+    "        \"B\", xy=(0, 1.05), xycoords=\"axes fraction\", fontsize=16, weight=\"bold\"\n",
+    "    )\n",
+    "\n",
+    "    plt.suptitle(\n",
+    "        \"Finite Diff vs. Spectral Diff (No Rxn)\", fontsize=18\n",
+    "    )\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(\"../figures/findiff-v-specdiff.png\")\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_diffusion(self, t, newfig=True):\n",
+    "    # TODO: move to separate file\n",
+    "    # plot with time on the x-axis\n",
+    "    x_idx = [self.impulse_idx + i for i in range(0, 10)]\n",
+    "    x_labels = [*range(0, 10)]\n",
+    "    for i in range(len(x_idx)):\n",
+    "        axs[1].plot(\n",
+    "            self.time_mesh,\n",
+    "            self.u_diff[x_idx[i], :] / self.n_ca,\n",
+    "            label=f\"$\\Delta$x = {x_labels[i]}\",\n",
+    "        )\n",
+    "    fig.set_xlabel(\"Time (usec)\")\n",
+    "    fig.set_title(\"Calcium vs Time\")\n",
+    "    fig.legend(title=\"steps from impulse\")\n",
+    "    fig.annotate(\n",
+    "        \"B\", xy=(0, 1.05), xycoords=\"axes fraction\", fontsize=16, weight=\"bold\"\n",
+    "    )\n",
+    "\n",
+    "    fig.suptitle(\"Spectral Calcium Diffusion with No Reactions\", fontsize=18)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(\"../figures/spectral-diff-norxns.png\")\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "eeg",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
