Ayo I think I finally got it

--- a/src/models/spec_vs_eme_eigmode.ipynb
+++ b/src/models/spec_vs_eme_eigmode.ipynb
@@ -2,16 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.0001357  0.00054265 0.00122048 0.00216851 0.00338584\n",
+      " 0.00487129 0.00662342 0.00864053 0.01092067 0.01346164 0.01626098\n",
+      " 0.01931598 0.02262369 0.0261809  0.02998418 0.03402984 0.03831397\n",
+      " 0.04283242 0.04758084 0.05255461 0.05774893 0.06315877 0.06877891\n",
+      " 0.0746039  0.0806281  0.0868457  0.09325067 0.09983682 0.10659777\n",
+      " 0.11352699 0.12061778 0.12786326 0.13525644 0.14279016 0.15045713\n",
+      " 0.15824993 0.16616103 0.17418278 0.1823074  0.19052705 0.19883376\n",
+      " 0.20721951 0.21567618 0.22419559 0.2327695  0.24138961 0.25004758\n",
+      " 0.25873504 0.26744359 0.27616479 0.28489021 0.29361141 0.30231996\n",
+      " 0.31100742 0.31966539 0.3282855  0.33685941 0.34537882 0.35383549\n",
+      " 0.36222124 0.37052795 0.3787476  0.38687222 0.39489397 0.40280507\n",
+      " 0.41059787 0.41826484 0.42579856 0.43319174 0.44043722 0.44752801\n",
+      " 0.45445723 0.46121818 0.46780433 0.4742093  0.4804269  0.4864511\n",
+      " 0.49227609 0.49789623 0.50330607 0.50850039 0.51347416 0.51822258\n",
+      " 0.52274103 0.52702516 0.53107082 0.5348741  0.53843131 0.54173902\n",
+      " 0.54479402 0.54759336 0.55013433 0.55241447 0.55443158 0.55618371\n",
+      " 0.55766916 0.55888649 0.55983452 0.56051235 0.5609193 ]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(101, 100)"
+       "array([[1.        , 1.        , 1.        , ..., 1.        , 1.        ,\n",
+       "        1.        ],\n",
+       "       [1.        , 0.99986431, 0.99972864, ..., 0.98692372, 0.98678981,\n",
+       "        0.98665592],\n",
+       "       [1.        , 0.99945749, 0.99891528, ..., 0.94872399, 0.94820931,\n",
+       "        0.9476949 ],\n",
+       "       ...,\n",
+       "       [1.        , 0.57130359, 0.3263878 , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [1.        , 0.57091648, 0.32594563, ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [1.        , 0.57068419, 0.32568045, ..., 0.        , 0.        ,\n",
+       "        0.        ]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,6 +68,7 @@
     "emd_eig_values, emd_eig_vectors, idx = eigenmarkov.get_eigenvalues_and_vectors(\n",
     "    print_output=False\n",
     ")\n",
+    "print(emd_eig_values)\n",
     "\n",
     "time = np.array(range(n_time_pts))\n",
     "emd_modes = []\n",
@@ -42,7 +78,7 @@
     "\n",
     "\n",
     "emd_modes = np.array(emd_modes)\n",
-    "emd_modes.shape\n"
+    "emd_modes\n"
    ]
   },
   {
@@ -58,20 +94,17 @@
       "Solving dTdt...\n",
       "Initializing solution array...\n",
       "Beginning simulation...\n",
-      "Time step:  0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "SpectralRxnDiffusion.diffusion_temporal_eqtn() missing 1 required positional argument: 'get'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 38\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# SPECTRAL DIFFUSION\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# sd.simulate_diffusion()\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# sd.plot_diffusion([0, 1, 5, 20, 40, 50, 100])\u001b[39;00m\n\u001b[1;32m     35\u001b[0m sd\u001b[38;5;241m.\u001b[39msolve_dTdt(\n\u001b[1;32m     36\u001b[0m     save_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/spectral-diffusion/eigenmode-exps/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_eigenmodes\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/T.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     37\u001b[0m )\n\u001b[0;32m---> 38\u001b[0m \u001b[43msd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate_diffusion\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/Computer Science/diffusion-model/src/models/SpectralRxnDiffusion.py:217\u001b[0m, in \u001b[0;36mSpectralRxnDiffusion.simulate_diffusion\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    215\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime step: \u001b[39m\u001b[38;5;124m\"\u001b[39m, time_idx)\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m space_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_spatial_locs):\n\u001b[0;32m--> 217\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu_diff[space_idx, time_idx] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdiffusion_spectral_eqtn\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    218\u001b[0m \u001b[43m            \u001b[49m\u001b[43mspace_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime_idx\u001b[49m\n\u001b[1;32m    219\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    220\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSimulation complete!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    222\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu_diff\n",
-      "File \u001b[0;32m~/Desktop/Computer Science/diffusion-model/src/models/SpectralRxnDiffusion.py:196\u001b[0m, in \u001b[0;36mSpectralRxnDiffusion.diffusion_spectral_eqtn\u001b[0;34m(self, x_idx, t_idx)\u001b[0m\n\u001b[1;32m    187\u001b[0m out \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    189\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_eigenmodes):\n\u001b[1;32m    190\u001b[0m     out\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m    191\u001b[0m          (\n\u001b[1;32m    192\u001b[0m             (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_ca \u001b[38;5;241m/\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_spatial_locs \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mline_length))\n\u001b[1;32m    193\u001b[0m             \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mZ_n(m)\n\u001b[1;32m    194\u001b[0m             \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcos_n(m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mspatial_mesh[x_idx])\n\u001b[1;32m    195\u001b[0m             \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcos_n(m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mspatial_mesh[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimpulse_idx])\n\u001b[0;32m--> 196\u001b[0m             \u001b[38;5;241m*\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdiffusion_temporal_eqtn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt_idx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    197\u001b[0m         )\n\u001b[1;32m    198\u001b[0m     )\n\u001b[1;32m    200\u001b[0m u \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mZ_n(\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28msum\u001b[39m(out)\n\u001b[1;32m    201\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m u\n",
-      "\u001b[0;31mTypeError\u001b[0m: SpectralRxnDiffusion.diffusion_temporal_eqtn() missing 1 required positional argument: 'get'"
+      "Time step:  0\n",
+      "Time step:  10\n",
+      "Time step:  20\n",
+      "Time step:  30\n",
+      "Time step:  40\n",
+      "Time step:  50\n",
+      "Time step:  60\n",
+      "Time step:  70\n",
+      "Time step:  80\n",
+      "Time step:  90\n",
+      "Simulation complete!\n"
      ]
     }
    ],
@@ -93,10 +126,11 @@
     "\n",
     "\n",
     "n_time_pts = 100  # number of time points\n",
-    "n_space_pts = 101  # 101  # number of spatial points\n",
+    "n_space_pts = 101 \n",
     "ca_init_idx = get_ca_init_idx(n_space_pts)\n",
     "\n",
-    "n_eigenmodes = 300\n",
+    "# Changed from 300 for a more 1-1 comparison\n",
+    "n_eigenmodes = 101\n",
     "\n",
     "# Spectral Method (calbindin reactions)\n",
     "sd = SpectralRxnDiffusion(\n",
@@ -107,18 +141,76 @@
     ")\n",
     "\n",
     "# SPECTRAL DIFFUSION\n",
-    "# sd.simulate_diffusion()\n",
+    "\n",
     "# sd.plot_diffusion([0, 1, 5, 20, 40, 50, 100])\n",
     "\n",
     "sd.solve_dTdt(\n",
     "    save_dir=f\"../data/spectral-diffusion/eigenmode-exps/{n_eigenmodes}/T.npy\"\n",
     ")\n",
-    "sd.simulate_diffusion()"
+    "\n",
+    "\n",
+    "sd.simulate_diffusion()\n",
+    "test = np.load(f\"../data/spectral-diffusion/eigenmode-exps/{n_eigenmodes}/T.npy\")\n",
+    "# srd_modes = np.zeroes((sd.spatial_mesh.shape, sd.u_diff))\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sd_modes = []\n",
+    "# for n in range(n_eigenmodes):\n",
+    "#     λ = sd.lambda_value(n)\n",
+    "#     sd_mode = eigenmarkov.get_eigenmode(λ, time) \n",
+    "#     sd_modes.append(sd_mode)\n",
+    "\n",
+    "sd_modes = []\n",
+    "for n in range(n_eigenmodes):\n",
+    "    sd_mode = sd.get_eigenmode(n, time)\n",
+    "    sd_modes.append(sd_mode)\n",
+    "\n",
+    "\n",
+    "sd_modes = np.array(sd_modes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         1.         1.         ... 1.         1.         1.        ]\n",
+      " [1.         0.9998643  0.99972862 ... 0.98692268 0.98678875 0.98665485]\n",
+      " [1.         0.99945732 0.99891493 ... 0.94870789 0.94819304 0.94767847]\n",
+      " ...\n",
+      " [1.         0.27162561 0.07378047 ... 0.         0.         0.        ]\n",
+      " [1.         0.2644601  0.06993914 ... 0.         0.         0.        ]\n",
+      " [1.         0.25741374 0.06626183 ... 0.         0.         0.        ]]\n",
+      "[[1.         1.         1.         ... 1.         1.         1.        ]\n",
+      " [1.         0.99986431 0.99972864 ... 0.98692372 0.98678981 0.98665592]\n",
+      " [1.         0.99945749 0.99891528 ... 0.94872399 0.94820931 0.9476949 ]\n",
+      " ...\n",
+      " [1.         0.57130359 0.3263878  ... 0.         0.         0.        ]\n",
+      " [1.         0.57091648 0.32594563 ... 0.         0.         0.        ]\n",
+      " [1.         0.57068419 0.32568045 ... 0.         0.         0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sd_modes)\n",
+    "print(emd_modes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
