reformatted using black

--- a/prev_diff_models/CaDiffZeroFluxMCellTestOld.ipynb
+++ b/prev_diff_models/CaDiffZeroFluxMCellTestOld.ipynb
@@ -41,18 +41,18 @@
    },
    "outputs": [],
    "source": [
-    "def time_hist(dir,iter_num, plot=True):\n",
-    "    '''\n",
+    "def time_hist(dir, iter_num, plot=True):\n",
+    "    \"\"\"\n",
     "    Calculates concentration of calcium per spherical shell at a given radius\n",
     "    over time for MCell simulation.\n",
     "    :param dir: MCell ASCII data location\n",
     "    :param iter_num: which iteration/time point to plot\n",
     "    :param plot: if output should be plotted\n",
     "    :return: ca radial locations\n",
-    "    '''   \n",
-    "    rxn_rad = 0.02     # reaction radius size (micron)\n",
-    "    snare_locs = [(0, 0)] # for only one giant SNARE\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "    rxn_rad = 0.02  # reaction radius size (micron)\n",
+    "    snare_locs = [(0, 0)]  # for only one giant SNARE\n",
+    "    \"\"\"\n",
     "    snare_locs = [(0, 0),\n",
     "                  (0.035, 0),\n",
     "                  (-0.035, 0),\n",
@@ -60,54 +60,68 @@
     "                  (-0.0175, 0.0303),\n",
     "                  (0.0175, -0.0303),\n",
     "                  (-0.0175, -0.0303)]      # SNARE (x,y) locations\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    z = -0.25\n",
     "\n",
     "    ca_hist = []\n",
     "    for seed in sorted(os.listdir(mcell_viz_dir)):\n",
     "\n",
     "        # data file location\n",
-    "        iter_file = os.path.join(mcell_viz_dir, seed, 'Scene.ascii.{}.dat'.format(iter_num))\n",
+    "        iter_file = os.path.join(\n",
+    "            mcell_viz_dir, seed, \"Scene.ascii.{}.dat\".format(iter_num)\n",
+    "        )\n",
     "\n",
     "        # create dataframe\n",
-    "        loc_data = pd.read_csv(iter_file, delim_whitespace=True, header=None,\n",
-    "                           names=['type', 'id', 'x', 'y', 'z', 'norm_x', 'norm_y', 'norm_z'])\n",
+    "        loc_data = pd.read_csv(\n",
+    "            iter_file,\n",
+    "            delim_whitespace=True,\n",
+    "            header=None,\n",
+    "            names=[\"type\", \"id\", \"x\", \"y\", \"z\", \"norm_x\", \"norm_y\", \"norm_z\"],\n",
+    "        )\n",
     "        # select only calcium\n",
-    "        loc_data = loc_data[loc_data['type'] == 'ca']\n",
+    "        loc_data = loc_data[loc_data[\"type\"] == \"ca\"]\n",
     "\n",
     "        # radius from x, y, and z coordinates\n",
-    "        loc_data['r'] = np.sqrt(loc_data['x'] ** 2 + loc_data['y'] ** 2 + loc_data['z'] ** 2)\n",
+    "        loc_data[\"r\"] = np.sqrt(\n",
+    "            loc_data[\"x\"] ** 2 + loc_data[\"y\"] ** 2 + loc_data[\"z\"] ** 2\n",
+    "        )\n",
     "\n",
-    "        snare_ca_tot = 0        # number of calcium in SNARE rxn zone\n",
-    "        for x,y in snare_locs:\n",
+    "        snare_ca_tot = 0  # number of calcium in SNARE rxn zone\n",
+    "        for x, y in snare_locs:\n",
     "            print()\n",
-    "            print(\"SNARE LOCATION:\\t\", x,y)\n",
+    "            print(\"SNARE LOCATION:\\t\", x, y)\n",
     "\n",
     "            # Ugly method\n",
-    "            for ca_x, ca_y, ca_z in zip(loc_data['x'], loc_data['y'], loc_data['z']):\n",
+    "            for ca_x, ca_y, ca_z in zip(loc_data[\"x\"], loc_data[\"y\"], loc_data[\"z\"]):\n",
     "                if ca_z <= z + rxn_rad:\n",
     "                    if (ca_x >= x - rxn_rad) & (ca_x <= x + rxn_rad):\n",
     "                        if (ca_y >= y - rxn_rad) & (ca_y <= y + rxn_rad):\n",
     "                            print(\"CA LOCATION:\\t\", ca_x, ca_y, ca_z)\n",
     "\n",
     "            # Slick method\n",
-    "            snare_ca_tot += len(loc_data[(loc_data['x'] >= x - rxn_rad) & (loc_data['x'] <= x + rxn_rad) \n",
-    "                    & (loc_data['y'] >= y - rxn_rad) & (loc_data['y'] <= y + rxn_rad) \n",
-    "                    & (loc_data['z'] <= z + rxn_rad)])\n",
+    "            snare_ca_tot += len(\n",
+    "                loc_data[\n",
+    "                    (loc_data[\"x\"] >= x - rxn_rad)\n",
+    "                    & (loc_data[\"x\"] <= x + rxn_rad)\n",
+    "                    & (loc_data[\"y\"] >= y - rxn_rad)\n",
+    "                    & (loc_data[\"y\"] <= y + rxn_rad)\n",
+    "                    & (loc_data[\"z\"] <= z + rxn_rad)\n",
+    "                ]\n",
+    "            )\n",
     "\n",
-    "        #print()\n",
+    "        # print()\n",
     "        if snare_ca_tot != 0:\n",
     "            print(\"TIME POINT:\\t\", iter_num)\n",
     "            print(\"TOTAL NUMBER:\\t\\t\", snare_ca_tot)\n",
-    "            #print(\"TOTAL CONC:\\t\\t\", (2*snare_ca_tot*pi*(rxn_rad**3))/3) # CHANGE TO REFLECT VOLUME OF INTEREST\n",
+    "            # print(\"TOTAL CONC:\\t\\t\", (2*snare_ca_tot*pi*(rxn_rad**3))/3) # CHANGE TO REFLECT VOLUME OF INTEREST\n",
     "            print()\n",
     "            print()\n",
     "\n",
-    "        for value in loc_data['r'].values:\n",
+    "        for value in loc_data[\"r\"].values:\n",
     "            ca_hist.append(value)\n",
     "\n",
     "    if plot:\n",
-    "        #plt.hist(ca_hist, bins=250, color='C0')\n",
+    "        # plt.hist(ca_hist, bins=250, color='C0')\n",
     "        sns.distplot(ca_hist, bins=100)\n",
     "        plt.show()\n",
     "\n",
@@ -126,8 +140,10 @@
    "outputs": [],
    "source": [
     "# plot for multiple time points\n",
-    "mcell_viz_dir = \"/Users/margotwagner/ucsd/research/DiffusionModel/\" \\\n",
-    "                \"rect_zeroflux_nocalbpmca_files/mcell/output_data/viz_data_ascii\""
+    "mcell_viz_dir = (\n",
+    "    \"/Users/margotwagner/ucsd/research/DiffusionModel/\"\n",
+    "    \"rect_zeroflux_nocalbpmca_files/mcell/output_data/viz_data_ascii\"\n",
+    ")"
    ]
   },
   {
@@ -142,7 +158,10 @@
    "outputs": [],
    "source": [
     "# get time points\n",
-    "time_pts = [scene.split('.')[2] for scene in os.listdir(os.path.join(mcell_viz_dir, 'seed_00001'))]\n",
+    "time_pts = [\n",
+    "    scene.split(\".\")[2]\n",
+    "    for scene in os.listdir(os.path.join(mcell_viz_dir, \"seed_00001\"))\n",
+    "]\n",
     "time_pts.sort()"
    ]
   },
@@ -165,8 +184,8 @@
     }
    ],
    "source": [
-    "#sample points\n",
-    "nums = [time_pts[i] for i in range(len(time_pts)) if i%1==0]\n",
+    "# sample points\n",
+    "nums = [time_pts[i] for i in range(len(time_pts)) if i % 1 == 0]\n",
     "print(nums)"
    ]
   },
@@ -2756,9 +2775,9 @@
    "source": [
     "data = []\n",
     "for num in nums:\n",
-    "    #print()\n",
-    "    #print()\n",
-    "    #print(\"TIME POINT:\\t\", num)\n",
+    "    # print()\n",
+    "    # print()\n",
+    "    # print(\"TIME POINT:\\t\", num)\n",
     "    ca_hist = time_hist(mcell_viz_dir, num, plot=False)\n",
     "    sns.distplot(ca_hist, label=num, bins=100)"
    ]
@@ -2794,11 +2813,11 @@
     }
    ],
    "source": [
-    "plt.xlabel('Radius')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Calcium frequency with radius')\n",
+    "plt.xlabel(\"Radius\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Calcium frequency with radius\")\n",
     "plt.legend()\n",
-    "plt.savefig('mcell_ca_impulse_diff.png')\n",
+    "plt.savefig(\"mcell_ca_impulse_diff.png\")\n",
     "plt.show()"
    ]
   },
