--- a/rxn-model/notebooks/markov2State.ipynb
+++ b/rxn-model/notebooks/markov2State.ipynb
@@ -27,17 +27,18 @@
    "outputs": [],
    "source": [
     "# Create voltage waveform Vm(t)\n",
-    "# In this example, v_m(t) = v_m_const * H(t - t_input) \n",
+    "# In this example, v_m(t) = v_m_const * H(t - t_input)\n",
+    "\n",
     "\n",
     "def v_m(t):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Function for the membrane voltage waveform as a function of time Vm(t)\n",
     "    input:    time t (value or array)\n",
     "    output:   Vm(t) = 30*H(t-t_input)\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    v_m_const = 30  # mV\n",
-    "    t_input = 10    # S\n",
-    "    \n",
+    "    t_input = 10  # S\n",
+    "\n",
     "    return v_m_const * (t >= t_input)"
    ]
   },
@@ -60,7 +61,7 @@
     }
    ],
    "source": [
-    "t = sp.arange(-100, 100) \n",
+    "t = sp.arange(-100, 100)\n",
     "plt.plot(t, v_m(t))\n",
     "plt.show()"
    ]
@@ -73,15 +74,16 @@
    "source": [
     "# Define the transition rates (as a function of time implicitly)\n",
     "\n",
+    "\n",
     "def alpha_n(t):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Function for the opening rate as a function of time Vm(t)\n",
     "    input:    time t (value or array)\n",
     "    output:   alpha_n = alpha_0*exp(lamda*Vm)\n",
-    "    '''  \n",
-    "    alpha_0 = 0.6   # 1/s\n",
-    "    lambda_const = 0.02    # 1/mV\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    alpha_0 = 0.6  # 1/s\n",
+    "    lambda_const = 0.02  # 1/mV\n",
+    "\n",
     "    return alpha_0 * np.exp(lambda_const * v_m(t))"
    ]
   },
@@ -92,14 +94,14 @@
    "outputs": [],
    "source": [
     "def beta_n(t):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Function for the closing rate as a function of time Vm(t)\n",
     "    input:    time t (value or array)\n",
     "    output:   beta_n = beta_0*exp(mu*Vm)\n",
-    "    '''  \n",
-    "    beta_0 = 0.8   # 1/s\n",
-    "    mu_const = 0.02    # 1/mV\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    beta_0 = 0.8  # 1/s\n",
+    "    mu_const = 0.02  # 1/mV\n",
+    "\n",
     "    return beta_0 * np.exp(mu_const * v_m(t))"
    ]
   },
@@ -133,7 +135,7 @@
    ],
    "source": [
     "# Plot transition rates as a function of time\n",
-    "t = sp.arange(-100,100)\n",
+    "t = sp.arange(-100, 100)\n",
     "plt.plot(t, alpha_n(t))\n",
     "plt.plot(t, beta_n(t))"
    ]
@@ -144,16 +146,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solve for number of open channels as a function of time \n",
+    "# Solve for number of open channels as a function of time\n",
     "# using rate equation\n",
     "\n",
+    "\n",
     "def dndt(n, t):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Rate equation for mean number of open channels\n",
     "    input:    time (t) [value or array]\n",
     "              number of open channels (n)\n",
     "    output:   rate equation\n",
-    "    '''  \n",
+    "    \"\"\"\n",
     "    return alpha_n(t) * (1 - n) - beta_n(t) * n"
    ]
   },
@@ -163,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = sp.arange(0,20)\n",
+    "t = sp.arange(0, 20)\n",
     "\n",
     "n_t = odeint(dndt, [0], t)"
    ]
@@ -207,8 +210,8 @@
    "outputs": [],
    "source": [
     "# Simulate Markov process for stochastically opening and closing channels\n",
-    "def markov_n_channels(n,t,dt):\n",
-    "    '''\n",
+    "def markov_n_channels(n, t, dt):\n",
+    "    \"\"\"\n",
     "    Function to simulate to opening and closing of channels as a Markov process\n",
     "\n",
     "    input:    number of channels (n) [int]\n",
@@ -216,12 +219,12 @@
     "              time step (dt)         [int/double]\n",
     "\n",
     "    output:   fraction of open channels over time (output) [1d array]\n",
-    "    '''  \n",
-    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    # All gates start closed\n",
     "    gate_states = [0] * n\n",
     "    output = []\n",
-    "    \n",
+    "\n",
     "    for tp in t:\n",
     "        for gate in range(n):\n",
     "            # Roll the dice for each gate at each time point\n",
@@ -233,7 +236,7 @@
     "                # Test if opened closes\n",
     "                gate_states[gate] = int(r < (1 - beta_n(tp) * dt))\n",
     "        output.append(sum(gate_states) * 1.0 / n)\n",
-    "    return output\n"
+    "    return output"
    ]
   },
   {
@@ -258,9 +261,9 @@
     "dt = 0.01\n",
     "t = sp.arange(0, 20, dt)\n",
     "\n",
-    "plt.plot(t, markov_n_channels(1,t,dt), color='blue', label='N=1')\n",
-    "plt.plot(t, markov_n_channels(30,t,dt), color='green', label='N=30')\n",
-    "plt.plot(t, markov_n_channels(1000,t,dt), color='black', label='N=1000')\n",
+    "plt.plot(t, markov_n_channels(1, t, dt), color=\"blue\", label=\"N=1\")\n",
+    "plt.plot(t, markov_n_channels(30, t, dt), color=\"green\", label=\"N=30\")\n",
+    "plt.plot(t, markov_n_channels(1000, t, dt), color=\"black\", label=\"N=1000\")\n",
     "plt.legend()\n",
     "\n",
     "plt.show()"
