--- a/prev_diff_models/CaDiffusionMCellOld.ipynb
+++ b/prev_diff_models/CaDiffusionMCellOld.ipynb
@@ -73,7 +73,7 @@
     "AXON_H = 4\n",
     "N_CA = 5275 + 47\n",
     "N_BINS = 4\n",
-    "CA_REL_LOC = (0.21, 0, -.249)"
+    "CA_REL_LOC = (0.21, 0, -0.249)"
    ]
   },
   {
@@ -89,43 +89,46 @@
    "outputs": [],
    "source": [
     "def load_data(MCELL_DIR):\n",
-    "    \n",
+    "\n",
     "    runs = {}\n",
-    "    \n",
+    "\n",
     "    # Add data to all arrays\n",
     "    for seed in range(N_SEEDS):\n",
     "        # Seed dir\n",
     "        seed_loc = \"seed_{:05d}\".format(seed + 1)  # numbering starts at 1\n",
-    "        \n",
+    "\n",
     "        # Create 3D array for each seed (mol info x N mols x iteration)\n",
     "        data = []\n",
-    "        \n",
+    "\n",
     "        for i in range(ITER_START, N_ITER, ITER_STEP):\n",
     "            # Iter dir\n",
     "            iter_loc = \"Scene.ascii.{:04d}.dat\".format(i)\n",
-    "            \n",
+    "\n",
     "            # Load data\n",
     "            fname = os.path.join(MCELL_DIR, seed_loc, iter_loc)\n",
-    "            data_df = pd.read_csv(fname, delim_whitespace=True, header=None, \n",
-    "                                  names=['type', 'id', 'x', 'y', 'z', 'norm_x', 'norm_y','norm_z'])\n",
-    "            \n",
+    "            data_df = pd.read_csv(\n",
+    "                fname,\n",
+    "                delim_whitespace=True,\n",
+    "                header=None,\n",
+    "                names=[\"type\", \"id\", \"x\", \"y\", \"z\", \"norm_x\", \"norm_y\", \"norm_z\"],\n",
+    "            )\n",
+    "\n",
     "            # Adjust vdcc loc to be (x = 0, y = 0, z = 0)\n",
-    "            data_df['x'] = data_df['x'] - CA_REL_LOC[0]\n",
-    "            data_df['y'] = data_df['y'] - CA_REL_LOC[1]\n",
-    "            data_df['z'] = data_df['z'] - CA_REL_LOC[2]\n",
-    "            \n",
+    "            data_df[\"x\"] = data_df[\"x\"] - CA_REL_LOC[0]\n",
+    "            data_df[\"y\"] = data_df[\"y\"] - CA_REL_LOC[1]\n",
+    "            data_df[\"z\"] = data_df[\"z\"] - CA_REL_LOC[2]\n",
+    "\n",
     "            # Add radius column\n",
     "            # Axon length runs along x direction\n",
-    "            data_df['r'] = np.sqrt(data_df['y']**2 + data_df['z']**2)\n",
-    "            \n",
+    "            data_df[\"r\"] = np.sqrt(data_df[\"y\"] ** 2 + data_df[\"z\"] ** 2)\n",
+    "\n",
     "            # Add to data list\n",
     "            data.append(data_df)\n",
-    "        \n",
+    "\n",
     "        # Append to dict\n",
     "        runs[seed_loc] = data\n",
-    "        \n",
-    "    return runs\n",
-    "    "
+    "\n",
+    "    return runs"
    ]
   },
   {
@@ -140,27 +143,28 @@
    "outputs": [],
    "source": [
     "def diff_scatter_plot(runs, seed=1, timepoint=1):\n",
-    "    '''Creates a scatter plot for the current integer run of interest'''\n",
+    "    \"\"\"Creates a scatter plot for the current integer run of interest\"\"\"\n",
     "    # Seed name\n",
     "    seed_loc = \"seed_{:05d}\".format(seed)  # numbering starts at 1\n",
-    "    \n",
+    "\n",
     "    # Look at single iteration\n",
     "    tp_idx = timepoint - 1\n",
-    "    \n",
-    "    r = runs[seed_loc][tp_idx]['r'] # radius is 0 to 0.5\n",
-    "    h = runs[seed_loc][tp_idx]['x'] # height is -2.0 to 2.0\n",
-    "    \n",
+    "\n",
+    "    r = runs[seed_loc][tp_idx][\"r\"]  # radius is 0 to 0.5\n",
+    "    h = runs[seed_loc][tp_idx][\"x\"]  # height is -2.0 to 2.0\n",
+    "\n",
     "    fig = plt.figure()\n",
-    "    ax = plt.axes(xlim=(- AXON_H/2 + CA_REL_LOC[2], AXON_H/2 + CA_REL_LOC[2] + 0.05), \n",
-    "                  ylim=(0 - 0.01, AXON_R + 0.01))\n",
-    "    \n",
-    "    ax.set_xlabel('axon length')\n",
+    "    ax = plt.axes(\n",
+    "        xlim=(-AXON_H / 2 + CA_REL_LOC[2], AXON_H / 2 + CA_REL_LOC[2] + 0.05),\n",
+    "        ylim=(0 - 0.01, AXON_R + 0.01),\n",
+    "    )\n",
+    "\n",
+    "    ax.set_xlabel(\"axon length\")\n",
     "    ax.set_xlim((-0.5, 0.5))\n",
-    "    ax.set_ylabel('axon radius')\n",
+    "    ax.set_ylabel(\"axon radius\")\n",
     "    plt.scatter(h, r, alpha=0.2)\n",
-    "    plt.scatter(-0.21, 0, color='k')\n",
-    "    plt.show()\n",
-    "    "
+    "    plt.scatter(-0.21, 0, color=\"k\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -175,44 +179,46 @@
    "outputs": [],
    "source": [
     "def diff_3D_plot(runs, seed=1, timepoint=1):\n",
-    "    '''Creates a 3D bar plot for the current integer run of interest'''\n",
+    "    \"\"\"Creates a 3D bar plot for the current integer run of interest\"\"\"\n",
     "    # Seed name\n",
     "    seed_loc = \"seed_{:05d}\".format(seed)  # numbering starts at 1\n",
-    "    \n",
+    "\n",
     "    # Look at single iteration\n",
     "    tp_idx = timepoint - 1\n",
-    "    \n",
-    "    r = runs[seed_loc][tp_idx]['r'] # radius is 0 to 0.5\n",
-    "    h = runs[seed_loc][tp_idx]['x'] # height is -2.0 to 2.0\n",
-    "    \n",
+    "\n",
+    "    r = runs[seed_loc][tp_idx][\"r\"]  # radius is 0 to 0.5\n",
+    "    h = runs[seed_loc][tp_idx][\"x\"]  # height is -2.0 to 2.0\n",
+    "\n",
     "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111, projection='3d')\n",
-    "    \n",
+    "    ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "\n",
     "    # Obtain histogram for 2d\n",
-    "    hist, xedges, yedges = np.histogram2d(r, h, bins=N_BINS, \n",
-    "                                          range=[[0, AXON_R], \n",
-    "                                                 [- AXON_H/2 + CA_REL_LOC[2], AXON_H/2 + CA_REL_LOC[2]]])\n",
-    "    \n",
+    "    hist, xedges, yedges = np.histogram2d(\n",
+    "        r,\n",
+    "        h,\n",
+    "        bins=N_BINS,\n",
+    "        range=[[0, AXON_R], [-AXON_H / 2 + CA_REL_LOC[2], AXON_H / 2 + CA_REL_LOC[2]]],\n",
+    "    )\n",
+    "\n",
     "    # Construct arrays for anchor positions of bars\n",
     "    xpos, ypos = np.meshgrid(xedges[:-1], yedges[:-1], indexing=\"ij\")\n",
     "    xpos = xpos.ravel()\n",
     "    ypos = ypos.ravel()\n",
     "    zpos = 0\n",
-    "    \n",
+    "\n",
     "    # Construct array with the dimensions for the bars\n",
     "    # distance between bin vals\n",
     "    dx = xedges[1] - xedges[0]\n",
     "    dy = yedges[1] - yedges[0]\n",
-    "    dz = (hist/N_CA).ravel()\n",
-    "    \n",
-    "    ax.bar3d(xpos, ypos, zpos, dx, dy, dz)\n",
-    "    \n",
-    "    ax.set_xlabel('r')\n",
-    "    ax.set_ylabel('h')\n",
-    "    ax.set_zlabel('fraction')\n",
+    "    dz = (hist / N_CA).ravel()\n",
     "\n",
-    "    plt.show()\n",
-    "    "
+    "    ax.bar3d(xpos, ypos, zpos, dx, dy, dz)\n",
+    "\n",
+    "    ax.set_xlabel(\"r\")\n",
+    "    ax.set_ylabel(\"h\")\n",
+    "    ax.set_zlabel(\"fraction\")\n",
+    "\n",
+    "    plt.show()"
    ]
   },
   {
@@ -289,7 +295,7 @@
     }
    ],
    "source": [
-    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER/ITER_STEP))\n",
+    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER / ITER_STEP))\n",
     "seed_slide = wg.IntSlider(value=1, min=1, max=N_SEEDS)\n",
     "wg.interact(diff_3D_plot, runs=wg.fixed(runs), seed=seed_slide, timepoint=tp_slide)\n",
     "plt.show()"
@@ -1886,9 +1892,10 @@
    ],
    "source": [
     "from importlib import reload\n",
+    "\n",
     "reload(plt)\n",
     "%matplotlib notebook\n",
-    "diff_3D_plot(runs,1,1)"
+    "diff_3D_plot(runs, 1, 1)"
    ]
   },
   {
@@ -1953,7 +1960,7 @@
     }
    ],
    "source": [
-    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER/ITER_STEP))\n",
+    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER / ITER_STEP))\n",
     "seed_slide = wg.IntSlider(value=1, min=1, max=N_SEEDS)\n",
     "wg.interact(diff_scatter_plot, seed=seed_slide, timepoint=tp_slide)\n",
     "plt.show()"
@@ -1985,7 +1992,7 @@
     }
    ],
    "source": [
-    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER/ITER_STEP))\n",
+    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER / ITER_STEP))\n",
     "seed_slide = wg.IntSlider(value=1, min=1, max=N_SEEDS)\n",
     "wg.interact(diff_3D_plot, seed=seed_slide, timepoint=tp_slide)\n",
     "plt.show()"
@@ -2794,7 +2801,7 @@
    "source": [
     "reload(plt)\n",
     "%matplotlib notebook\n",
-    "diff_3D_plot(1,50)"
+    "diff_3D_plot(1, 50)"
    ]
   },
   {
@@ -2839,9 +2846,11 @@
     }
    ],
    "source": [
-    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER/ITER_STEP))\n",
+    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER / ITER_STEP))\n",
     "seed_slide = wg.IntSlider(value=1, min=1, max=N_SEEDS)\n",
-    "wg.interact(diff_scatter_plot, runs=wg.fixed(runs_pmca), seed=seed_slide, timepoint=tp_slide)\n",
+    "wg.interact(\n",
+    "    diff_scatter_plot, runs=wg.fixed(runs_pmca), seed=seed_slide, timepoint=tp_slide\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -2871,7 +2880,7 @@
     }
    ],
    "source": [
-    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER/ITER_STEP))\n",
+    "tp_slide = wg.IntSlider(value=1, min=1, max=int(N_ITER / ITER_STEP))\n",
     "seed_slide = wg.IntSlider(value=1, min=1, max=N_SEEDS)\n",
     "wg.interact(diff_3D_plot, runs=wg.fixed(runs_pmca), seed=seed_slide, timepoint=tp_slide)\n",
     "plt.show()"
@@ -4468,9 +4477,9 @@
     }
    ],
    "source": [
-    "#reload(plt)\n",
+    "# reload(plt)\n",
     "#%matplotlib notebook\n",
-    "#diff_3D_plot(runs_pmca,1,50)"
+    "# diff_3D_plot(runs_pmca,1,50)"
    ]
   },
   {
