--- a/src/eme-scale-exp.ipynb
+++ b/src/eme-scale-exp.ipynb
@@ -203,21 +203,15 @@
     "import utils.PlotMultiruns as pm\n",
     "\n",
     "plotter = pm.PlotMultiRuns(\n",
-    "    rw_dir=\"../data/eme-validation/random-walk/20231112_234059/rw-run-{}.csv\",  # \"/Users/margotwagner/diffusion-model/data/eme-validation/random-walk/20230118_192600/rw-run-{}.csv\",\n",
-    "    eme_dir=\"../data/eme-validation/markov-eme/20240303_152758/eme-run-{}.csv\",  # \"/Users/margotwagner/diffusion-model/data/eme-validation/markov-eme/20230405_105433_2/eme-run-{}.csv\",\n",
+    "    dir=\"../data/eme-validation/markov-eme/20240303_152758/eme-run-{}.csv\",  # \"/Users/margotwagner/diffusion-model/data/eme-validation/markov-eme/20230405_105433_2/eme-run-{}.csv\",\n",
     "    n_runs=10,\n",
-    "    n_spatial_locs=n_space_pts,\n",
-    "    n_time_pts=n_time_pts,  # TODO: make automatic\n",
-    "    particle_start_loc=ca_init_idx,\n",
-    "    n_particles=50,\n",
-    "    plot_eme=True,  # TODO: fix LHS entry\n",
-    "    plot_rw=False,\n",
+    "    \n",
     ")\n",
     "\n",
     "# plotter.plot_multiruns()\n",
     "# TODO: debug multirun plot for EME -- giving impulse at boundary\n",
     "# plotter.plot_multiruns_time([0, 99, 99])\n",
-    "plotter.plot_multiruns()"
+    "plotter.plot_multiruns_space()"
    ]
   },
   {
